# amethyst-starter-2d

./: .gitignore  Cargo.toml  README.md
.assets_db/: data.mdb.REMOVED.git-id  lock.mdb
.assets_db/cache/: data.mdb.REMOVED.git-id  lock.mdb
assets/sprites/: logo.ron
config/: display_config.ron  input.ron
resources/: display_config.ron
resources/sprites/: GodenRod_City.ron  logo.ron
src/: main.rs  render.rs  state.rs
src/components/: map.rs  mod.rs
src/systems/: map.rs  mod.rs
